--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 <div class="footer">
     <img src="logo.png" alt="">
-    <p>&#169 2024 All rights reserved. <br> This website is made and maintaind by Rajshekhar Roy.</p>
+    <p>&#169 2024 All rights reserved. <br> This website is made and maintained by Rajshekhar Roy.</p>
 </div>
 
 </body>
